--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ publishDir = "docs"
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "hello friend ng"
+      logoText = "Xusheng"
       logoHomeLink = "/"
     # or
     #
