--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ publishDir = "docs"
   dateformNumTime = "2006-01-02 15:04"
 
   # Subtitle for home
-  homeSubtitle = "Reversing, coding, and Xiagnqi"
+  homeSubtitle = "Reversing, coding, and Xiangqi"
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
@@ -34,7 +34,7 @@ publishDir = "docs"
 [languages]
   [languages.en]
     title = "Xusheng's blog"
-    subtitle = "Reversing, coding, and Xiagnqi"
+    subtitle = "Reversing, coding, and Xiangqi"
     keywords = ""
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
     readOtherPosts = "Read other posts"
